--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
   </head>
   <body>
     <div class="center">
-      <h1>hi</h1>
+      <script type="text/javascript" src="./MyMenu1/MyMenu1.js?h=82F9"></script>
+      <div id="MyMenu1"></div>
     </div>
 
     <script src="app.js"></script>
