--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
       <script type="text/javascript" src="./MyMenu1/MyMenu1.js?h=82F9"></script>
       <div id="MyMenu1"></div>
     </div>
-
+    <footer>
+      <div>
+        Menu made with
+        <a
+          href="https://www.dropdownmenugenerator.com/"
+          title="Dropdown Menu Generator"
+          >Dropdown Menu Generator</a
+        >
+      </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
